style.css
@import url('https://fonts.googleapis.com/css2?family=Baskervville:ital@0;1&family=DM+Serif+Text:ital@0;1&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');


*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Inter', sans-serif;
}

body {
    background-color: #F5F7FA;
}

nav {
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 2rem 10rem;
}

#menu-icon {
    display: none;
}

ul {
    display: flex;
    gap: 3rem;
}

ul li {
    list-style: none;

}

ul li a {
    text-decoration: none;
    color: #000;
    font-weight: 600;
}

ul li a:hover {
    color: #388E3B;
}

ul li a.active {
    color: #388E3B;
}


.btn {
    padding: 1rem 2rem;
    border-radius: .7rem;
    border: 0;
}

.login-btn {
   color: #4CAF4F;
   font-size: 14px;
   line-height: 20px;
   border: 1px solid #F5F7FA;
}

.login-btn:hover {
    border: 1px solid #388E3B;
    color: #388E3B;
}

.signup-btn {
    background-color: #4CAF4F;
    color: #fff;
    border: 1px solid #4CAF4F;
}

.signup-btn:hover {
    background-color: #388E3B;
    border: 1px solid #388E3B;
}

/* hero section */

.hero-container {
    display: flex;
    justify-content: space-between;
    padding: 0 4rem;
    margin: 4rem 8rem;
    /* width: 100%; */
}

.hero-text h1 {
    font-size: 4rem;
    margin-bottom: .5rem;
    color: #4D4D4D;
    font-weight: 600;
}

.hero-text h1 span {
    color: #4CAF4F;
}

.hero-text p {
    color: #717171;
    font-size: .7rem;
    margin-bottom: 3rem;
}

.hero-text .btn {
    background-color: #4CAF4F;
    color: #fff;
    padding: 1rem 3rem;
    border-radius: 4px;
}

.hero-text .btn:hover {
    background-color: #388E3B;
}


.hero-img img {
    margin-right: 4rem;
    width: 100%;
}

/* Community section */

.community-container{
    
    background-color: #fff;
    padding-top: 3rem;
    text-align: center;
    padding: 2rem 8rem;
}

.community-card{
    display: flex;
}

.community-box {
    padding: 5rem;
    text-align: center;
}

.community-box img {
    margin-bottom: 2rem;
}

.community-box h3 {
    margin-bottom: 1rem;
    font-size: 2.4rem;
    color: #4D4D4D;
    font-weight: 700;
}

.community-container h2 {
    margin-bottom: 1.5rem;
    font-size: 3rem;
    text-align: center;
    color: #4D4D4D;
    font-weight: 600;
}

.community-container p {
    color: #4D4D4D;
}

.pixel-container {
    display: flex;
    align-items: center;
    padding: 2rem 8rem;
    background-color: #fff;
} 

.pixel-container .btn {
    background-color: #4CAF4F;
    color: #fff;
    padding: 1rem 3rem;
    border-radius: 4px;
    font-size: 16px;
}

.pixel-container .btn:hover {
    background-color: #388E3B;
}

.pixel-text {
    padding-inline: 10rem;
}

.pixel-text h2 {
    font-size: 32px;
    margin-bottom: 1rem;
    color: #4D4D4D;
    font-weight: 600;
}

.pixel-text p {
    color: #4D4D4D;
    margin-bottom: 1rem;
    font-weight: 400;
    text-align: justify;
}

/* profile section  */

.profile-container{
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 2rem 15rem;
    color: #4D4D4D;
}

.profile-text h2 {
    font-size: 36px;
    margin-bottom: 1rem;
}

.profile-text h2 span {
    color: #4CAF4F;
}

.profile-card{
    display: grid;
    grid-template-columns: repeat(2, 1fr );
    gap: 3rem;
    
}

.profile-box{
    display: flex;
    gap: 1rem;
}

.customer-container {
    display: flex;
    padding: 2rem 13rem;
    justify-content: space-between;
    gap: 4rem;
}

.customer-container p:first-child {
    margin-bottom: 1rem;
    text-align: justify;
    color: #4D4D4D;
}

.customer-container i {
    color: #4CAF4F;
}

.customer-container p:nth-of-type(2) {
    color: #4CAF4F;
    font-size: 1.5rem;
    font-weight: 600;
}
.customer-container p:nth-of-type(3) {
    color: #89939E;

}

.customer-box {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    margin-top: 2rem;
}

.customer-box p {
    color: #4CAF4F;
   margin-top: 1rem;
   display: inline-flex;
   align-items: center;
   gap: .5rem;
   cursor: pointer;
}

.customer-box p:hover {
    color: #388E3B;
}



.marketing-container{
    padding: 2rem 13rem 9rem;
    text-align: center;
    color: #4D4D4D;
    background-color: #fff;
}

.marketing-container h2 {
    font-size: 3rem;
    margin-bottom: 1rem;

}
.marketing-container p {
    font-size: 1.5rem;
    margin: 1rem auto 3rem;
    

}

.marketing-card{
    display: flex;
    gap: 2rem;
}

.marketing-box{
    position: relative;
    text-align: center;
    overflow: visible;
}

.marketing-content  {
    margin: 2rem;
    padding: 1rem 2.5rem;
    border-radius: 10px;
    position: absolute;
    background: #F5F7FA;
    margin-top: -80px;
    z-index: 10;
    border-radius: 10px;
    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
}

.marketing-content h4 {
    margin-bottom: .7rem;
}

.marketing-content h4:nth-child(2) {
    display: inline-flex;
    align-items: center;
    gap: .5rem;
    color: #4CAF4F;
    cursor: pointer;
}

.marketing-content h4:nth-child(2):hover {
   color: #388E3B;
}

.demo-container {
    padding: 2rem 18rem;
    text-align: center;

}

.demo-container h2 {
    font-size: 4rem;
    margin-bottom: 2rem;
}
.demo-container .btn {
    background-color: #4CAF4F;
    color: #fff;
    padding: 1rem 3rem;
    border-radius: 4px;
    font-size: 16px;
}

.demo-container .btn:hover {
    background-color: #388E3B;
}

footer {
    background-color: #263238;
}

.footer-container{
    display: flex;
    justify-content: space-between;
    padding: 4rem 10rem;
    color: #fff;
}

.footer-container h4 {
    font-size: 1.8rem;
    margin-bottom: 2rem;
}

.footer-container img {
    margin-bottom: 2rem;
}

.footer-container p {
    margin-bottom: 1rem;
    font-size: 14px;
}

 .socials{
    display: flex;
    gap: 1rem;
    margin-top: 3rem;
}


.input-container{
    display: inline-block;
    position: relative;
}
.input-container input{
    padding: 1rem 2rem;
    border-radius: .7rem;
    background-color: #515B60;
    border: none;
    outline: none;
    color: #fff;
 }

 .input-icon {
    position: absolute;
    right: 10px;
    top: 40%;
    transform: translateY(-50%);
    cursor: pointer;
 }

 ::placeholder {
    color: #fff;
    opacity: 0.7;
 }

 /* Media query */


 @media (min-width: 601px) and (max-width: 768px) {
    
    nav {
        padding: 2rem 2rem;
        margin-right: 4rem;
        width: 100%;
    }

    .navigation{
        display: none;
    }

    #menu-icon {
        font-size: 2rem;
        color: #388E3B;
        display: block;
    }

    .hero-container {
        padding: 0 1rem;
        margin: 2rem 2rem;
    }

    .hero-text h1 {
        font-size: 3rem;
    }

    .hero-img img {
        margin-right: 0;
        width: 100%;
    }

    .community-container {
        padding: 3rem 0 ;
        margin: 0;
    }

    .community-card {
     flex-direction: column;
      width: 100%;
     }

    .community-container h2 {
        font-size: 1.5rem;
    }

    .community-box {
        padding: 1rem 5rem; 
        text-align: center;
    }
    
    .community-box img {
        margin-bottom: 1rem;
    }
    
    .community-box h3 {
        margin-bottom: .7rem;
        font-size: 2rem;
    }

    .pixel-container {
        flex-direction: row-reverse;
        padding: 2rem 2rem;
    }

    .pixel-container img {
        /* margin-left: 0; */
        width: 20rem;
    }

    .pixel-text {
        padding-inline: 2rem 5rem;
    }

    .profile-container {
        padding: 2rem 4rem;
        gap: 1rem;
    }

    .customer-container {
        padding: 2rem 3rem;
        flex-direction: column;
        align-items: center;
        gap: 1.5rem;
    }

    .marketing-container{
        padding: 2rem 5rem 9rem;
    }

    .marketing-card {
        flex-direction: column;
    }

    .marketing-content  {
        /* margin: 1rem; */
        padding: 1rem 2rem;
    }
    .demo-container {
        padding: 2rem 3rem;
    }

    .footer-container{
        padding: 4rem 3rem;
        gap: 1rem;
    }
    .input-container input{
        padding: 1rem .7rem;
    }


    


 }

 @media (max-width: 600px) {
   
    nav {
        padding: 2rem 1rem;
        width: 100%;
    }

    nav img {
        width: 70%;
    }

    .navigation{
        display: none;
    }
    .reg-buttons .btn{
        padding: .5rem .5rem;
    }

    .reg-buttons {
        align-items: center;
    }

    #menu-icon{
        display: block;
        font-size: 2rem;
        color: #388E3B;
    }

    .hero-container {
        padding: 0 1rem;
        margin: 2rem 2rem;
    }

    .hero-text h1 {
        font-size: 2rem;
    }

    .hero-img img {
        margin-right: 0;
        width: 80%;
    }

    .community-container {
        padding: 3rem 0 ;
        margin: 0;
    }

    .community-card {
     flex-direction: column;
      width: 100%;
     }

    .community-container h2 {
        font-size: 1.3rem;
    }

    .community-box {
        padding: 1rem 5rem; 
        text-align: center;
    }
    
    .community-box img {
        margin-bottom: 1rem;
    }
    
    .community-box h3 {
        margin-bottom: .7rem;
        font-size: 2rem;
    }

    .pixel-container {
        flex-direction: column;
        padding: 2rem 2rem;
    }

    .pixel-container img {
        width: 20rem;
    }

    .pixel-text {
        padding-inline: 2rem 5rem;
    }

    .profile-container {
        flex-direction: column;
        padding: 2rem 4rem;
        gap: 1rem;
    }

    .profile-card {
        padding: 2rem 4rem;
        gap: 1rem;
    }

    .profile-card h3 {
        font-size: 1rem;
    }

    .profile-text h2 {
        font-size: 2rem;
    }

    .customer-container {
        padding: 2rem 3rem;
        flex-direction: column;
        align-items: center;
        gap: 1.5rem;
    }

    .customer-image img {
        width: 80%;
    }

    .customer-box {
        justify-content: space-evenly;
        gap: .7rem;
    }
    .customer-box img {
        width: 10%;
    }
    .customer-box p {
        gap: .3rem;
        font-size: .7rem;
    }

    .marketing-container{
        padding: 2rem 4rem 7rem;
    }

    .marketing-box{
        position: relative;
        text-align: center;
        margin-bottom: 5rem;
    }

    .marketing-box img {
        width: 100%;
    }

    .marketing-card {
        flex-direction: column;
    }

    .marketing-content  {
        /* margin: 1rem; */
        padding: 1rem 2rem;
    }
    .demo-container {
        padding: 2rem 3rem;
    }
     .demo-container h2 {
        font-size: 2rem;
     }

    .footer-container{
       display: grid;
        padding: 4rem 3rem;
        gap: 1rem;
    }
    .input-container input{
        padding: 1rem .7rem;
    }

    .input-icon {
        top: 80%;
    }
    
  }
  

